actually fixed the table overflow problem

--- a/components/pages/accounts/Accounts.module.css
+++ b/components/pages/accounts/Accounts.module.css
@@ -34,8 +34,8 @@
   text-transform: uppercase;
   font-weight: normal;
   text-align: left;
-  padding: 2px;
   border-bottom: 1px solid var(--admin-dark-blue);
+  padding: 10px 10px;
 }
 
 .table tbody tr:not(:last-of-type) {
@@ -43,7 +43,9 @@
 }
 
 .table tbody td {
-  padding: 10px 2px;
+  padding: 10px 10px;
+  max-width: min(300px, calc(20vw));
+  overflow: auto;
 }
 
 .label {
